WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
57574
Preload scanner fails to pick up resources from document.write() output
https://bugs.webkit.org/show_bug.cgi?id=57574
Summary
Preload scanner fails to pick up resources from document.write() output
Antti Koivisto
Reported
2011-03-31 13:52:15 PDT
With this <script> document.write('<script src="resources/document-write-plaintext.js"></sc'+'ript>'); document.write('<script src="resources/script1.js"></sc'+'ript>'); </script> preload scanner does fails to pick up the script1.js. This used to work and was lost with the HTML5 parser.
Attachments
patch
(10.05 KB, patch)
2011-03-31 14:21 PDT
,
Antti Koivisto
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2011-03-31 14:21:02 PDT
Created
attachment 87785
[details]
patch - Scan script inserted source using a separate preload scanner. - Make the main preload scanner correctly process the remaining source if script execution blocked the parser.
Oliver Hunt
Comment 2
2011-03-31 14:36:30 PDT
Comment on
attachment 87785
[details]
patch r=me, but it would be good to have a test for nested document.write()
Antti Koivisto
Comment 3
2011-03-31 15:51:29 PDT
http://trac.webkit.org/changeset/82631
Adam Barth
Comment 4
2011-03-31 16:00:51 PDT
Comment on
attachment 87785
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=87785&action=review
> LayoutTests/fast/preloader/document-write.html:13 > + if (window.layoutTestController) > + setTimeout(function(){ layoutTestController.notifyDone() }, 1000);
This seems like it will make the test slow and flaky. :(
WebKit Review Bot
Comment 5
2011-03-31 16:33:31 PDT
http://trac.webkit.org/changeset/82631
might have broken Leopard Intel Release (Tests) The following tests are not passing: fast/preloader/document-write-2.html fast/preloader/document-write.html fast/preloader/scan-body-from-head.html
Antti Koivisto
Comment 6
2011-03-31 17:46:38 PDT
<
rdar://problem/9219111
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug