https://bugs.webkit.org/show_bug.cgi?id=57574 Preload scanner fails to pick up resources from document.write() output

Reviewed by Oliver Hunt.

Source/WebCore:

- Scan script inserted source using a separate preload scanner.
- Make the main preload scanner correctly process the remaining source if script execution blocked the parser.

Tests: fast/preloader/document-write-2.html
       fast/preloader/document-write.html

* html/parser/HTMLDocumentParser.cpp:
(WebCore::HTMLDocumentParser::insert):
(WebCore::HTMLDocumentParser::appendCurrentInputStreamToPreloadScannerAndScan):
* html/parser/HTMLDocumentParser.h:
(WebCore::HTMLDocumentParser::hasPreloadScanner):
* html/parser/HTMLScriptRunner.cpp:
(WebCore::HTMLScriptRunner::execute):
* html/parser/HTMLScriptRunnerHost.h:

LayoutTests:

* fast/preloader/document-write-2-expected.txt: Added.
* fast/preloader/document-write-2.html: Added.
* fast/preloader/document-write-expected.txt: Added.
* fast/preloader/document-write.html: Added.
* fast/preloader/resources/document-write-plaintext.js: Added.



Canonical link: https://commits.webkit.org/72426@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82631 268f45cc-cd09-0410-ab3c-d52691b4dbfc